--- a/Web-Application/my-project/public/index.html
+++ b/Web-Application/my-project/public/index.html
@@ -100,8 +100,8 @@
     </div>
     <div id="single_post">
       <script id="single_post_view" type="text/x-handlebars-template">
-        <div id="postss">   
-             <div>{{picture.p_url}}</div>
+        <div id="Like">   
+              <!-- <div>{{picture.p_url}}</div> -->
               <div>{{picture.p_caption}}</div>         
               <div>{{picture.p_author.username}}</div>  
               <div>{{picture.published_at}}</div> 
