--- a/Web-Application/my-project/public/index.html
+++ b/Web-Application/my-project/public/index.html
@@ -27,6 +27,12 @@
         <li><a href="#whatis">About</a></li>
       </ul>
     </nav>
+    <form id = 'loginform'>
+      <input id = "username" type="text" id = "username"/>
+      <input id = "password" type="password" id = "password"/>
+      <button id = "login">Login</button>
+    </form>
+    </div>
 
   </header>
 
